third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/double-sign-nex.stderr
TOML parse error at line 1, column 20
  |
1 | double-sign-nex = --99
  |                    ^
invalid integer
